[project]
name = "baseline-knn"
version = "0.1.0"
description = "The baseline KNN against which I compare the ones I study."

dependencies = [
    "numpy",
    "scikit-learn",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

profiling = [
    "memory-profiler",
    "psutil",
    "line-profiler",
    "py-spy",
    "memray",
    "scalene",
]

benchmark = [
    "pytest-benchmark",
    "pympler",
]

# Black configuration
[tool.black]
line-length = 88

# isort configuration
[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
include = ["classifier*", "profiling*"]
