[project]
name = "baseline-knn"
version = "0.1.0"
description = "The baseline KNN against which I compare the ones I study."

dependencies = [
    "numpy",
    "scikit-learn",
    "scikit-optimize",
    "pandas",
    "openml",
    "ucimlrepo",
    "pillow",
    "scipy",
    "joblib",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

# Black configuration
[tool.black]
line-length = 88

# isort configuration
[tool.isort]
profile = "black"
line_length = 88

# bandit configuration
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.setuptools.packages.find]
include = ["classifier*", "profiling*"]
